@@ -18,6 +18,7 @@ import android.text.TextUtils;
 
 import androidx.test.core.app.ApplicationProvider;
 
+import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Rule;
@@ -34,6 +35,7 @@ import org.robolectric.shadows.ShadowNotificationManager;
 import org.chromium.base.Callback;
 import org.chromium.base.FeatureList;
 import org.chromium.base.metrics.RecordHistogram;
+import org.chromium.base.metrics.UmaRecorderHolder;
 import org.chromium.base.test.BaseRobolectricTestRunner;
 import org.chromium.chrome.R;
 import org.chromium.chrome.browser.DefaultBrowserInfo2;
@@ -42,16 +44,18 @@ import org.chromium.chrome.browser.notifications.NotificationUmaTracker;
 import org.chromium.components.feature_engagement.FeatureConstants;
 import org.chromium.components.feature_engagement.Tracker;
 
-import java.util.Map;
+import java.util.Collections;
 
 /** Unit tests for {@link ReengagementNotificationController}. */
 @RunWith(BaseRobolectricTestRunner.class)
 @Config(shadows = {ShadowNotificationManager.class})
 @LooperMode(LooperMode.Mode.LEGACY)
 public class ReengagementNotificationControllerTest {
-    @Rule public MockitoRule mMockitoRule = MockitoJUnit.rule();
+    @Rule
+    public MockitoRule mMockitoRule = MockitoJUnit.rule();
 
-    @Mock public Tracker mTracker;
+    @Mock
+    public Tracker mTracker;
 
     private Context mContext;
     private ShadowNotificationManager mShadowNotificationManager;
@@ -74,30 +78,29 @@ public class ReengagementNotificationControllerTest {
     @Before
     public void setUp() throws Exception {
         FeatureList.setTestFeatures(
-                Map.of(
-                        ChromeFeatureList.REENGAGEMENT_NOTIFICATION,
-                        true));
+                Collections.singletonMap(ChromeFeatureList.REENGAGEMENT_NOTIFICATION, true));
         mContext = ApplicationProvider.getApplicationContext();
-        mShadowNotificationManager =
-                Shadows.shadowOf(
-                        (NotificationManager)
-                                mContext.getSystemService(Context.NOTIFICATION_SERVICE));
+        mShadowNotificationManager = Shadows.shadowOf(
+                (NotificationManager) mContext.getSystemService(Context.NOTIFICATION_SERVICE));
+        UmaRecorderHolder.resetForTesting();
+    }
+
+    @After
+    public void tearDown() {
+        UmaRecorderHolder.resetForTesting();
     }
 
     @Test
     public void testReengagementFirstFeature() {
         ReengagementNotificationController controller =
                 new TestingReengagementNotificationController(
-                        createDefaultInfo(/* passesPrecondition= */ true));
-        doReturn(true)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE);
-        doReturn(false)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE);
-        doReturn(false)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE);
+                        createDefaultInfo(/* passesPrecondition = */ true));
+        doReturn(true).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE);
+        doReturn(false).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE);
+        doReturn(false).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE);
         controller.tryToReengageTheUser();
 
         testFeatureShowed(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE);
@@ -107,16 +110,13 @@ public class ReengagementNotificationControllerTest {
     public void testReengagementSecondFeature() {
         ReengagementNotificationController controller =
                 new TestingReengagementNotificationController(
-                        createDefaultInfo(/* passesPrecondition= */ true));
-        doReturn(false)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE);
-        doReturn(true)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE);
-        doReturn(false)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE);
+                        createDefaultInfo(/* passesPrecondition = */ true));
+        doReturn(false).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE);
+        doReturn(true).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE);
+        doReturn(false).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE);
         controller.tryToReengageTheUser();
 
         testFeatureShowed(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE);
@@ -126,16 +126,13 @@ public class ReengagementNotificationControllerTest {
     public void testReengagementThirdFeature() {
         ReengagementNotificationController controller =
                 new TestingReengagementNotificationController(
-                        createDefaultInfo(/* passesPrecondition= */ true));
-        doReturn(false)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE);
-        doReturn(false)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE);
-        doReturn(true)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE);
+                        createDefaultInfo(/* passesPrecondition = */ true));
+        doReturn(false).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE);
+        doReturn(false).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE);
+        doReturn(true).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE);
         controller.tryToReengageTheUser();
 
         testFeatureShowed(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE);
@@ -145,16 +142,13 @@ public class ReengagementNotificationControllerTest {
     public void testReengagementTwoFeaturesMet() {
         ReengagementNotificationController controller =
                 new TestingReengagementNotificationController(
-                        createDefaultInfo(/* passesPrecondition= */ true));
-        doReturn(false)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE);
-        doReturn(true)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE);
-        doReturn(true)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE);
+                        createDefaultInfo(/* passesPrecondition = */ true));
+        doReturn(false).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE);
+        doReturn(true).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE);
+        doReturn(true).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE);
         controller.tryToReengageTheUser();
 
         testFeatureShowed(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE);
@@ -164,16 +158,13 @@ public class ReengagementNotificationControllerTest {
     public void testReengagementAllFeaturesMet() {
         ReengagementNotificationController controller =
                 new TestingReengagementNotificationController(
-                        createDefaultInfo(/* passesPrecondition= */ true));
-        doReturn(true)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE);
-        doReturn(true)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE);
-        doReturn(true)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE);
+                        createDefaultInfo(/* passesPrecondition = */ true));
+        doReturn(true).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE);
+        doReturn(true).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE);
+        doReturn(true).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE);
         controller.tryToReengageTheUser();
 
         testFeatureShowed(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE);
@@ -183,30 +174,25 @@ public class ReengagementNotificationControllerTest {
     public void testReengagementNoFeatures() {
         ReengagementNotificationController controller =
                 new TestingReengagementNotificationController(
-                        createDefaultInfo(/* passesPrecondition= */ true));
-        doReturn(false)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE);
-        doReturn(false)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE);
-        doReturn(false)
-                .when(mTracker)
-                .shouldTriggerHelpUI(FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE);
+                        createDefaultInfo(/* passesPrecondition = */ true));
+        doReturn(false).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE);
+        doReturn(false).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE);
+        doReturn(false).when(mTracker).shouldTriggerHelpUI(
+                FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE);
         controller.tryToReengageTheUser();
-        new Handler()
-                .post(
-                        () ->
-                                Assert.assertEquals(
-                                        0,
-                                        mShadowNotificationManager.getAllNotifications().size()));
+        new Handler().post(
+                ()
+                        -> Assert.assertEquals(
+                                0, mShadowNotificationManager.getAllNotifications().size()));
     }
 
     @Test
     public void testReengagementNoPreconditions() {
         ReengagementNotificationController controller =
                 new TestingReengagementNotificationController(
-                        createDefaultInfo(/* passesPrecondition= */ false));
+                        createDefaultInfo(/* passesPrecondition = */ false));
         controller.tryToReengageTheUser();
         verifyNoMoreInteractions(mTracker);
         Assert.assertEquals(0, mShadowNotificationManager.getAllNotifications().size());
@@ -222,8 +208,7 @@ public class ReengagementNotificationControllerTest {
     }
 
     private void testFeatureShowed(String feature) {
-        Assert.assertEquals(
-                1,
+        Assert.assertEquals(1,
                 RecordHistogram.getHistogramValueCountForTesting(
                         "Mobile.SystemNotification.Shown", getNotificationType(feature)));
 
@@ -231,33 +216,23 @@ public class ReengagementNotificationControllerTest {
         verify(mTracker, times(1)).dismissed(feature);
         Notification notification = mShadowNotificationManager.getAllNotifications().get(0);
 
-        new Handler()
-                .post(
-                        () -> {
-                            Assert.assertEquals(
-                                    getNotificationTitle(feature),
-                                    notification
-                                            .extras
-                                            .getCharSequence(Notification.EXTRA_TITLE)
-                                            .toString());
-                            Assert.assertEquals(
-                                    getNotificationDescription(feature),
-                                    notification
-                                            .extras
-                                            .getCharSequence(Notification.EXTRA_TEXT)
-                                            .toString());
-                        });
+        new Handler().post(() -> {
+            Assert.assertEquals(getNotificationTitle(feature),
+                    notification.extras.getCharSequence(Notification.EXTRA_TITLE).toString());
+            Assert.assertEquals(getNotificationDescription(feature),
+                    notification.extras.getCharSequence(Notification.EXTRA_TEXT).toString());
+        });
     }
 
     private @NotificationUmaTracker.SystemNotificationType int getNotificationType(String feature) {
         if (TextUtils.equals(
-                feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE)) {
+                    feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE)) {
             return NotificationUmaTracker.SystemNotificationType.CHROME_REENGAGEMENT_1;
         } else if (TextUtils.equals(
-                feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE)) {
+                           feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE)) {
             return NotificationUmaTracker.SystemNotificationType.CHROME_REENGAGEMENT_2;
         } else if (TextUtils.equals(
-                feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE)) {
+                           feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE)) {
             return NotificationUmaTracker.SystemNotificationType.CHROME_REENGAGEMENT_3;
         }
 
@@ -267,13 +242,13 @@ public class ReengagementNotificationControllerTest {
 
     private String getNotificationTitle(String feature) {
         if (TextUtils.equals(
-                feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE)) {
+                    feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE)) {
             return mContext.getString(R.string.chrome_reengagement_notification_1_title);
         } else if (TextUtils.equals(
-                feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE)) {
+                           feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE)) {
             return mContext.getString(R.string.chrome_reengagement_notification_2_title);
         } else if (TextUtils.equals(
-                feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE)) {
+                           feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE)) {
             return mContext.getString(R.string.chrome_reengagement_notification_3_title);
         }
 
@@ -283,13 +258,13 @@ public class ReengagementNotificationControllerTest {
 
     private String getNotificationDescription(String feature) {
         if (TextUtils.equals(
-                feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE)) {
+                    feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_1_FEATURE)) {
             return mContext.getString(R.string.chrome_reengagement_notification_1_description);
         } else if (TextUtils.equals(
-                feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE)) {
+                           feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_2_FEATURE)) {
             return mContext.getString(R.string.chrome_reengagement_notification_2_description);
         } else if (TextUtils.equals(
-                feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE)) {
+                           feature, FeatureConstants.CHROME_REENGAGEMENT_NOTIFICATION_3_FEATURE)) {
             return mContext.getString(R.string.chrome_reengagement_notification_3_description);
         }
 
@@ -299,12 +274,9 @@ public class ReengagementNotificationControllerTest {
 
     private DefaultBrowserInfo2.DefaultInfo createDefaultInfo(boolean passesPrecondition) {
         int browserCount = passesPrecondition ? 2 : 1;
-        return new DefaultBrowserInfo2.DefaultInfo(
-                /* isChromeSystem= */ true,
-                /* isChromeDefault= */ true,
-                /* isDefaultSystem= */ true,
-                /* hasDefault= */ true,
-                browserCount,
-                /* systemCount= */ 0);
+        return new DefaultBrowserInfo2.DefaultInfo(/* isChromeSystem = */ true,
+                /* isChromeDefault = */ true,
+                /* isDefaultSystem = */ true, /* hasDefault = */ true, browserCount,
+                /* systemCount = */ 0);
     }
 }
